# api-docs/openapi/v3_0/apis_console.api_v1alpha1.json
@@ -117,6 +117,36 @@
         ]
       }
     },
+    "/apis/api.console.halo.run/v1alpha1/attachments/external-transfer": {
+      "post": {
+        "operationId": "ExternalTransferAttachment",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ExternalTransferRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "default": {
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/Attachment"
+                }
+              }
+            },
+            "description": "default response"
+          }
+        },
+        "tags": [
+          "AttachmentV1alpha1Console"
+        ]
+      }
+    },
     "/apis/api.console.halo.run/v1alpha1/attachments/upload": {
       "post": {
         "operationId": "UploadAttachment",
@@ -4050,6 +4080,28 @@
           },
           "metadata": {
             "$ref": "#/components/schemas/Metadata"
+          }
+        }
+      },
+      "ExternalTransferRequest": {
+        "required": [
+          "externalUrl",
+          "policyName"
+        ],
+        "type": "object",
+        "properties": {
+          "externalUrl": {
+            "type": "string",
+            "format": "uri"
+          },
+          "filename": {
+            "type": "string"
+          },
+          "groupName": {
+            "type": "string"
+          },
+          "policyName": {
+            "type": "string"
           }
         }
       },
